# hebbian_vision

./: .gitignore  model.py  pyproject.toml  run_deit.sh  train.py
